--- a/ResponsiveWebDesign/Web_Accessibility/index.html
+++ b/ResponsiveWebDesign/Web_Accessibility/index.html
@@ -16,10 +16,17 @@
 
 	<body>
 		<header>
+
+			<!-- A useful property of an SVG (scalable vector graphics) is that it contains a path attribute
+				which allows the image to be scaled without affecting the resolution of the resultant image. -->
 			<img id="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="FreeCodeCamp Logo">
 			<h1>HTML/CSS Quiz</h1>
 			<nav>
 				<ul>
+
+					<!-- Finally, the navigation accessibility can be improved by providing keyboard shortcuts.
+						The accesskey attribute accepts a space-separated list of access keys.
+						For example: `<button type="submit" accesskey="s">Submit</button>` -->
 					<li><a href="#student-info" accesskey="s">INFO</a></li>
 					<li><a href="#html-questions" accesskey="h">HTML</a></li>
 					<li><a href="#css-questions" accesskey="c">CSS</a></li>
